<resources>
    <string name="app_name">FireChat</string>
    <string name="messages">Messages</string>
    <string name="users">Users</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="newMessage">New message</string>
    <string name="send">Send</string>
    <string name="password">Password</string>
    <string name="confirmYourPassword">Confirm your password</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="signedInAs">Signed in as:</string>
    <string name="messageSentOn">Message sent on</string>
    <string name="at">at</string>
    <string name="signInFailed">Sign In failed</string>
    <string name="provideEmail">Please provide your email</string>
    <string name="undefinedError">Undefined Error</string>
    <string name="downloadCompleted">Download completed</string>
    <string name="download">Download</string>
    <string name="goBack">Go back</string>
    <string name="addImage">Add image</string>
    <string name="providePassword">Please provide your password</string>
    <string name="chooseStrongerPassword">Please choose a stronger password</string>
    <string name="emailAddressTaken">Email address already taken</string>
    <string name="invalidCredentials">Invalid credentials</string>
    <string name="noNetworkConnection">No network connection</string>
    <string name="pleaseConfirmPassword">Please confirm your password</string>
    <string name="yourUsernameWillBe">Your username will be:</string>
    <string name="userNotFoundOrDisabled">User account not found or disabled</string>
    <string name="Logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="unknownUser">Unknown user</string>
    <string name="emailBadlyFormatted">Email address badly formatted</string>
    <string name="loginFailed">Login failed</string>
    <string name="yourImageMessage">Your image message</string>
    <string name="redCircle">Red circle</string>
    <string name="contactImageMessage">Contact\'s image message</string>
    <string name="noImage">No image available</string>
    <string name="wrongPassword">Wrong password, or user does not have a password</string>
    <string name="tooManyFailedLoginAttempts">Sign in blocked due to many failed login attempts, try again later</string>
    <string name="preference_file_name">com.fruitPunchSamurai.fireChat.prefs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>